--- a/package.json
+++ b/package.json
@@ -3,23 +3,69 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "set NODE_OPTIONS='--max-old-space-size=8192' && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "setup": "./setup.sh"
   },
   "dependencies": {
-    "@types/node": "20.5.9",
+    "@clerk/nextjs": "^4.23.5",
+    "@huggingface/inference": "^1.8.0",
+    "@neondatabase/serverless": "^0.6.0",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^1.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.35.3",
+    "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.4",
+    "@visheratin/tokenizers-node": "^0.1.5",
+    "@visheratin/web-ai-node": "^1.4.2",
+    "@xenova/transformers": "^2.6.0",
+    "ai": "^2.2.12",
     "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
+    "axios": "^1.5.0",
+    "buffer": "^6.0.3",
+    "chromadb": "^1.5.11",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "cohere-ai": "^6.2.2",
+    "dotenv": "^16.3.1",
+    "drizzle-kit": "^0.19.13",
+    "drizzle-orm": "^0.28.6",
+    "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "faiss": "^1.0.0",
+    "fs": "^0.0.1-security",
+    "ipfs-http-client": "^60.0.1",
+    "jimp": "^0.16.13",
+    "langchain": "^0.0.148",
+    "lucide-react": "^0.276.0",
+    "md5": "^2.3.0",
+    "mime": "^3.0.0",
+    "mime-types": "^2.1.35",
     "next": "13.4.19",
+    "nft.storage": "^7.1.1",
+    "node-fetch": "^3.3.2",
+    "onnxruntime-node": "^1.16.0",
+    "openai-edge": "^1.2.2",
+    "path": "^0.12.7",
+    "pdf-parse": "^1.1.1",
+    "pg": "^8.11.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/md5": "^2.3.2"
   }
 }
